More Commands
and bugfixes